@@ -28,8 +28,8 @@ project.root         = ../..
 src.local-src.dir    = ../local-src
 src.resources.dir    = ../resources-links
 src.webapp.dir       = ${project.root}/application/sis-webapp/src/main/java
-src.app.dir          = ${project.root}/application/sis-app/src/main/java
-test.app.dir         = ${project.root}/application/sis-app/src/test/java
+src.console.dir      = ${project.root}/application/sis-console/src/main/java
+test.console.dir     = ${project.root}/application/sis-console/src/test/java
 src.netcdf.dir       = ${project.root}/storage/sis-netcdf/src/main/java
 test.netcdf.dir      = ${project.root}/storage/sis-netcdf/src/test/java
 src.storage.dir      = ${project.root}/storage/sis-storage/src/main/java
