@@ -1,1 +1,0 @@
-../../../../application/sis-app/src/main/resources/org/apache/sis/console/
