@@ -1,0 +1,1 @@
+../../../../../application/sis-console/src/main/resources/org/apache/sis/console/
